[package]
name = "core-money"
license = "BUSL-1.1"
edition = "2024"

[features]
fail-on-warnings = []
json-schema = ["schemars"]
graphql = ["async-graphql"]
avro = ["apache-avro"]

[dependencies]

serde = { workspace = true }
apache-avro = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-utils = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
async-graphql = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
