[package]
name = "core-price"
license = "BUSL-1.1"
edition = "2024"

[features]

fail-on-warnings = []
json-schema = ["dep:schemars", "core-money/json-schema"]
sim-time = ["dep:sim-time"]

[dependencies]
core-money = { workspace = true }

job = { workspace = true }
obix = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-macros = { workspace = true }
tracing-utils = { workspace = true }
schemars = { workspace = true, optional = true }
chrono = { workspace = true }
sim-time = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
anyhow = { workspace = true }
sqlx = { workspace = true }
rand = { workspace = true }
