[package]
name = "core-report"
license = "BUSL-1.1"
edition = "2024"

[features]
fail-on-warnings = []
graphql = ["es-entity/graphql"]
json-schema = [
    "dep:schemars",
    "es-entity/json-schema",
    "audit/json-schema",
]

[dependencies]
audit = { workspace = true }
async-trait = { workspace = true }
dagster = { workspace = true }
authz = { workspace = true }
job = { workspace = true }
obix = { workspace = true }
cloud-storage = { workspace = true }

es-entity = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
derive_builder = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-macros = { workspace = true }
tracing-utils = { workspace = true }
schemars = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
anyhow = { workspace = true }
obix = { workspace = true, features = ["test-utils"] }
tokio = { workspace = true }
