[package]
name = "statements"
version = "0.3.7-dev"
edition = "2021"

[features]
fail-on-warnings = []

[dependencies]
audit = { path = "../../lib/audit" }
authz = { path = "../../lib/authz" }

cala-ledger = { workspace = true }
es-entity = { workspace = true }
sqlx = { workspace = true }

serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
