[package]
name = "core-time-events"
license = "BUSL-1.1"
edition = "2024"

[features]

fail-on-warnings = []
json-schema = [                                                                                                                                        
    "dep:schemars",                                                                                                                                    
    "es-entity/json-schema",                                                                                                                           
]

[dependencies]
async-trait = { workspace = true }
domain-config = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true, features = ["serde"] }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-utils = { workspace = true }
tracing-macros = { workspace = true }
obix = { workspace = true }
job = { workspace = true }
es-entity = { workspace = true }
strum = { workspace = true }

schemars = { workspace = true, optional = true }
