[package]
name = "core-time-events"
license = "BUSL-1.1"
edition = "2024"

[features]

fail-on-warnings = []
json-schema = [                                                                                                                                        
    "dep:schemars",                                                                                                                                    
    "es-entity/json-schema",                                                                                                                           
]

[dependencies]
async-trait = { workspace = true }
audit = { workspace = true }
authz = { workspace = true }
derive_builder = { workspace = true }
domain-config = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true, features = ["serde"] }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-utils = { workspace = true }
tracing-macros = { workspace = true }
obix = { workspace = true }
job = { workspace = true }
process-manager = { workspace = true }
es-entity = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true }

schemars = { workspace = true, optional = true }
