[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "generate_es_reports"
version = "0.1.0"
description = "Package for generating ES regulatory reports"
requires-python = ">=3.10"
dependencies = [
    "PyYAML~=6.0",
    "google-cloud-storage~=2.18",
    "xmlschema~=3.4",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = [".."]
include = ["generate_es_reports", "generate_es_reports.*"]

[tool.setuptools.package-data]
generate_es_reports = ["*.yml", "schemas/*.xsd"]
