[package]
name = "chart-explorer"
version = "0.0.0"
edition = "2024"
license = "BUSL-1.1"

[[bin]]
name = "chart-explorer"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tui-tree-widget = { workspace = true }
uuid = { workspace = true }
