[package]
name = "check-dependency-dag"
version = "0.1.0"
edition = "2024"

[dependencies]
cargo_metadata = "0.18"
anyhow = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
quote = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lsp-types = "0.95" 